# crate-paths

./: .rustfmt.toml  .typos.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/crate-paths/: CHANGELOG.md  Cargo.toml  README.md
crates/crate-paths-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/crate-paths-cli-core/: CHANGELOG.md  Cargo.toml  README.md
crates/crate-paths-cli-core/docs/: ARCHITECTURE.md
crates/crate-paths-cli-core/src/: error.rs  item.rs  item_kind.rs  lib.rs  parser.rs  tree.rs
crates/crate-paths-cli-core/src/backend/: mod.rs
crates/crate-paths-cli-core/src/backend/docrs/: error.rs  mod.rs
crates/crate-paths-cli-core/src/backend/local/: error.rs  mod.rs
crates/crate-paths-cli-core/src/backend/rustup/: error.rs  mod.rs
crates/crate-paths-cli-core/tests/: snapshots.rs
crates/crate-paths-cli-core/tests/fixtures/: derive_crate.html  sample_crate.html
crates/crate-paths-cli-core/tests/snapshots/: snapshots__derive_crate.snap  snapshots__derive_crate_list.snap  snapshots__sample_crate.snap  snapshots__sample_crate_list.snap
crates/crate-paths-cli/docs/: ARCHITECTURE.md
crates/crate-paths-cli/src/: consts.rs  error.rs  lib.rs  main.rs  writer.rs
crates/crate-paths-cli/src/backend/: mod.rs  specific.rs  transitive.rs
crates/crate-paths-macro/: Cargo.toml
crates/crate-paths-macro/src/: impls.rs  lib.rs
crates/crate-paths-macro/tests/: lib.rs
crates/crate-paths-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/crate-paths-macros/docs/: ARCHITECTURE.md
crates/crate-paths-macros/src/: impls.rs  lib.rs
crates/crate-paths-macros/tests/: lib.rs
crates/crate-paths/docs/: ARCHITECTURE.md
crates/crate-paths/src/: lib.rs
crates/dummy-consumer-lib/: Cargo.toml  README.md
example/: Cargo.toml  Justfile
example/src/: lib.rs
tests/: Justfile
tests-paths/: Justfile  README.md
tests-paths/gpui-component-crate-paths/: CHANGELOG.md  Cargo.toml  README.md
tests-paths/gpui-component-crate-paths/src/: lib.rs
tests-paths/gpui-crate-paths/: Cargo.toml
tests-paths/gpui-crate-paths/src/: lib.rs
tests-paths/serde-crate-paths/: Cargo.toml
tests-paths/serde-crate-paths/src/: lib.rs
tests-paths/std-crate-paths/: Cargo.toml  README.md
tests-paths/std-crate-paths/src/: lib.rs
tests-paths/tonic-crate-paths/: Cargo.toml
tests-paths/tonic-crate-paths/src/: lib.rs
tests/gpui-component-crate-paths/: Cargo.toml
tests/gpui-crate-paths/: Cargo.toml  README.md
tests/gpui-crate-paths/src/: lib.rs
tests/serde-crate-paths/: Cargo.toml  README.md
tests/serde-crate-paths/src/: lib.rs
tests/std-crate-paths/: Cargo.toml
tests/std-crate-paths/src/: lib.rs
tests/tonic-crate-paths/: Cargo.toml  README.md
tests/tonic-crate-paths/src/: lib.rs
