[workspace]
default-members = [ "crates/crate-paths-cli" ]
members = [
  "crates/crate-paths",
  "crates/crate-paths-cli",
  "crates/crate-paths-cli-core",
  "crates/crate-paths-macros",
  "crates/dummy-consumer-lib",
  "example",
  "tests/gpui-component-crate-paths",
  "tests/gpui-crate-paths",
  "tests/serde-crate-paths",
  "tests/std-crate-paths",
  "tests/tonic-crate-paths",
]
resolver = "3"

[workspace.package]
categories = [ "development-tools::procedural-macro-helpers" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/crate-paths"
version = "0.1.1"

[workspace.dependencies]
Inflector = "0.11.4"
check_keyword = "0.4.1"
clap = "4.5.39"
crate-paths = { path = "crates/crate-paths", version = "0.1.1" }
crate-paths-cli-core = { path = "crates/crate-paths-cli-core", version = "0.1.1" }
crate-paths-macros = { path = "crates/crate-paths-macros", version = "0.1.1" }
derive_more = "2.0.1"
getset = "0.1.5"
prettyplease = "0.2.33"
proc-macro2 = "1.0.93"
quote = "1.0.38"
reqwest = "0.12.21"
rustdoc-types = "0.46.0"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
syn = "2.0.98"
thiserror = "2.0.12"
zstd = "0.13.3"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
uninlined_format_args = "allow"
unused_trait_names = "warn"
