[workspace]
default-members = [ "crates/crate-paths-cli" ]
members = [
  "crates/crate-paths",
  "crates/crate-paths-cli",
  "crates/crate-paths-cli-core",
  "crates/crate-paths-macros",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/crate-paths"
rust-version = "1.91"
version = "0.2.0"

[workspace.dependencies]
check_keyword = "0.4.1"
clap = "4.5.54"
crate-paths = { path = "crates/crate-paths", version = "0.2.0" }
crate-paths-cli-core = { path = "crates/crate-paths-cli-core", version = "0.2.0" }
crate-paths-macros = { path = "crates/crate-paths-macros", version = "0.2.0" }
derive_more = "2.1.1"
getset = "0.1.6"
heck = "0.5.0"
insta = "1.46.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.105"
quote = "1.0.43"
reqwest = "0.13.1"
rustdoc-types = "0.57.0"
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.149"
strum = "0.27.2"
syn = "2.0.114"
thiserror = "2.0.17"
zstd = "0.13.3"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
uninlined_format_args = "allow"
unused_trait_names = "warn"
