[package]
name = "crate-paths-cli-core"
description = """
    Core library for crate-paths-cli
"""
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
Inflector = { workspace = true }
check_keyword = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
getset = { workspace = true }
reqwest = { features = [ "blocking", "json", "zstd" ], workspace = true }
# rustdoc-types = { workspace = true }
scraper = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
