[package]
name = "crate-paths-cli-core"
description = """
    Core library for crate-paths-cli
"""
readme = "README.md"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
check_keyword = { workspace = true }
getset = { workspace = true }
heck = { workspace = true }
reqwest = { features = [ "blocking", "json", "zstd" ], workspace = true }
# rustdoc-types = { workspace = true }
scraper = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
