[package]
name = "crate-paths-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["transitive"]
transitive = []
specific = []

[dependencies]
clap = { workspace = true, features = ["derive"] }
crate-paths-cli-core = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
