[package]
name = "crate-paths-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords = [ "syn", "path", "crate" ]

[features]
default = [ "transitive" ]
specific = [  ]
transitive = [  ]

[dependencies]
clap = { features = [ "derive" ], workspace = true }
crate-paths-cli-core = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
