[package]
name = "crate-paths-cli"
description = """
    Cli that builds a tree of a crate's item paths
"""
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "cargo-crate-paths"
path = "src/main.rs"

[dependencies]
clap = { features = [ "derive" ], workspace = true }
crate-paths-cli-core = { workspace = true }
heck = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
