[package]
name = "crate-paths-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
check_keyword = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
crate-paths = { workspace = true }
