[package]
name = "crate-paths-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords = [ "syn", "path" ]

[lib]
proc-macro = true

[dependencies]
check_keyword = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[dev-dependencies]
crate-paths = { workspace = true }

[lints]
workspace = true
