[package]
name = "crate-paths-macros"
description = """
    Optional macros library for crate-paths
"""
readme = "README.md"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords = [ "syn", "path" ]

[lib]
proc-macro = true

[dependencies]
check_keyword = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
