[package]
name = "crate-paths-macros"
description = """
    Optional macros library for crate-paths
"""
readme = "README.md"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
check_keyword = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
