[package]
name = "crate-paths"
description = """
    Required library for crate-paths-cli's output
"""
readme = "README.md"
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
keywords = [ "syn", "path" ]

[features]
default = [  ]
macros = [ "dep:crate-paths-macros" ]

[dependencies]
crate-paths-macros = { optional = true, workspace = true }
derive_more = { features = [ "display" ], workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
crate-paths-macros = { workspace = true }

[lints]
workspace = true
